2010-03-02  Naohiro Aota  <naota@elisp.net>

	* w3m.el (top): Require image-mode if available.
	(w3m-image-page-displayed-p): New function.
	(w3m-create-image-page): Setup image-mode's variable if possible.
	(w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url)
	(w3m-shift-left, w3m-shift-right, w3m-beginning-of-line)
	(w3m-end-of-line): Call image-mode functions if possible and needed.

2010-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Turn truncate-lines off for text/plain pages.

2010-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Add menu to images.
	(w3m-download-this-image, w3m-print-this-image-url): New functions.
	(w3m-link-menu): Add them; enable menu only when url or image is there.

2010-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-window-hscroll): Revert 2010-01-13 change.

2010-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-cache-available-p): Now, pages with neither Last-Modified
	header and ETag header are treated as dynamically-generated pages.
	(w3m-cache-header-delete-variable-part): Contination lines are also
	removed.

2010-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-dirlist-cgi, w3m-set-display-ins-del):
	Honor w3m-command-environment.
	Suggested by Toru TSUNEYOSHI <t_tuneyosi@hotmail.com>.

2010-02-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-redisplay-this-page): Save positions.

2010-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-reload-this-page): Save positions.

	* w3m-hist.el (w3m-history-store-position)
	(w3m-history-restore-position): Use line number and column number to
	save positions.

2010-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-previous-page): Restore positions as well when
	jumping within a page.
	(w3m-view-this-url-1): Reset hscroll after retrieving a new page.
	(w3m-view-this-url): Save positions first.
	(w3m-delete-buffer): Restore positions in a page being left.