@@ -1,3 +1,8 @@
+2010-03-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el: Suppress compiler warnings that Emacs<22.2 and XEmacs issue
+	against image-mode functions.
+
 2010-03-02  Naohiro Aota  <naota@elisp.net>
 
 	* w3m.el (top): Require image-mode if available.
